--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Cortney Stauffer's Framework 0.1 BETA</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="styles/styles.css" />
+    <link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
 
 <body>
